--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
         <th>No</th>
         <th>Name</th>
         <th>Photo</th>
+        <th>Action</th>
       </tr>
 
       {{ range $index, $student := .students }}
@@ -22,6 +23,11 @@
           <a href="/static/upload/{{ $student.Photo }}" target="_blank">
             Show photo
           </a>
+        </td>
+        <td>
+          <a href="/edit?id={{ $student.Id }}">Edit</a>
+          &nbsp;
+          <a href="/delete?id={{ $student.Id }}">Delete</a>
         </td>
       </tr>
       {{ end }}
